[package]
name = "substrate-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
framenode-runtime = { path = "../runtime", default-features = false }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

[features]
std = ["framenode-runtime/std"]
private-net = ["framenode-runtime/private-net"]
wip = ["framenode-runtime/wip"]
ready-to-test = ["framenode-runtime/ready-to-test"]
