[package]
name = "transfer-contract"
authors = ["Soramitsu"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = 'https://github.com/sora-xor/sora2-network'
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false}

# add to another project: git = "https://github.com/sora-xor/sora2-network.git" branch = "release-x.x.x"
contract-extrinsics = { path = "../../contract-extrinsics", default-features = false }

sp-io = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "add_sora_substrate_commits", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "add_sora_substrate_commits", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "sp-runtime/std",
    "sp-io/std",
    "contract-extrinsics/std"
]
