[package]
name = "sccp-mcp"
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause"
description = "Stateless MCP server for SCCP across SORA and sibling chains"

[workspace]

[dependencies]
anyhow = "1.0"
base64 = "0.21"
blake2 = "0.10"
ethabi = "18"
hex = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.108"
sha3 = "0.10"
thiserror = "1.0"
toml = "=0.5.11"
twox-hash = "1.6"
ureq = { version = "=2.5.0", features = ["json"] }
