[package]
name = "sccp-mcp"
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause"
description = "Stateless MCP server for SCCP across SORA and sibling chains"

[workspace]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake2 = "0.10"
ethabi = "18"
hex = "0.4"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "2"
toml = "1"
twox-hash = "2"
ureq = { version = "3", features = ["json"] }
