[package]
name = "framenode-chain-spec"
version = "4.5.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", features = [
    "derive",
    "chain-error",
] }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
hex-literal = "0.4.1"
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-network-common = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }

bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.38", package = "pallet-multisig" }

common = { path = "../../common" }
faucet = { path = "../../pallets/faucet", optional = true }
framenode-runtime = { path = "../../runtime" }
iroha-migration = { path = "../../pallets/iroha-migration" }
permissions = { path = "../../pallets/permissions" }
rewards = { path = "../../pallets/rewards" }
technical = { path = "../../pallets/technical" }
xor-fee = { path = "../../pallets/xor-fee" }

[dev-dependencies]
common = { path = "../../common", features = ["test"] }

[features]
include-real-files = []
main-net-coded = []
test = ["common/test"]

private-net = ["faucet", "framenode-runtime/private-net"]
wip = ["framenode-runtime/wip"]
stage = ["framenode-runtime/stage"]
