[package]
name = "framenode-chain-spec"
version = "4.7.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", features = [
    "derive",
    "chain-error",
] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
hex-literal = "0.4.1"
sc-finality-grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
serde_json = "1"
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }

bridge-multisig = { path = "../../vendor/pallet-multisig", package = "pallet-multisig" }

common = { path = "../../common" }
faucet = { path = "../../pallets/faucet", optional = true }
framenode-runtime = { path = "../../runtime" }
iroha-migration = { path = "../../pallets/iroha-migration" }
permissions = { path = "../../pallets/permissions" }
rewards = { path = "../../pallets/rewards" }
technical = { path = "../../pallets/technical" }
xor-fee = { path = "../../pallets/xor-fee" }

[dev-dependencies]
common = { path = "../../common", features = ["test"] }
hex = "0.4"

[features]
include-real-files = []
main-net-coded = []
test = ["common/test"]
runtime-wasm = ["framenode-runtime/build-wasm-binary"]

private-net = ["faucet", "framenode-runtime/private-net"]
wip = ["framenode-runtime/wip"]
stage = ["framenode-runtime/stage"]
runtime-benchmarks = ["framenode-runtime/runtime-benchmarks"]
