[package]
description = "Pallet for APOLLO lending-borrowing platform."
authors = ["Jovan Milosevic <jovan@ceresblockchain.solutions>"]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "apollo-platform"
version = "1.3.1"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.20" }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
technical = { path = "../technical", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
permissions = { path = "../permissions", default-features = false }
hex-literal = "0.4.1"
frame-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-timestamp = { workspace = true, default-features = false }
price-tools = { path = "../price-tools", default-features = false }
liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
pool-xyk = { path = "../pool-xyk", default-features = false }

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
currencies = { workspace = true, default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
apollo-platform = { path = ".", default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
tokens = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk", default-features = false }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }
price-tools = { path = "../price-tools" }
liquidity-proxy = { path = "../liquidity-proxy" }
dex-api = { path = "../dex-api" }
vested-rewards = { path = "../vested-rewards", default-features = false }
multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }

[features]
default = ['std']
std = [
    "assets/std",
    "codec/std",
    "dex-manager/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "permissions/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
